MyDevOrg/src/objects/Developer_time_sheet__c.object
<CustomObject>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Developer_time_sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer task</label>
        <referenceTo>Developer_task__c</referenceTo>
        <relationshipLabel>Developer time sheets</relationshipLabel>
        <relationshipName>Developer_time_sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_worked__c</fullName>
        <label>Hours worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Date__c</fullName>
        <label>Timesheet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_description__c</fullName>
        <label>Work description</label>
        <type>TextArea</type>
    </fields>
    <label>Developer time sheet</label>
    <nameField>
        <displayFormat>DTS{0000000}</displayFormat>
        <label>Developer time sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer time sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>